fixing for dark mode

--- a/app/app.css
+++ b/app/app.css
@@ -8,7 +8,7 @@
   text-align: center;
 }
 .exhausted {
-  background-color: grey;
+  background-color: rgba(255, 0, 0, 0.2);
 }
 
 .defeated {
